# Metal-Engine

./: CMakeLists.txt  README.md
architecture/: class-diagram.plantuml
shaders/: general.metal  triangle.metal
src/: main.cpp
src/control/: app_delegate.cpp  app_delegate.hpp  view_delegate.cpp  view_delegate.hpp
src/controller/: app_delegate.cpp  app_delegate.hpp
src/model/: camera.cpp  camera.hpp  light.cpp  light.hpp  movement.cpp  movement.hpp  mtlm.cpp  mtlm.hpp  scene.cpp  scene.hpp  scene_element.cpp  scene_element.hpp  scene_object.cpp  scene_object.hpp
src/view/: color.cpp  color.hpp  colors.cpp  colors.hpp  mesh.cpp  mesh.hpp  mesh_factory.cpp  mesh_factory.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  renderer.cpp  renderer.hpp  renderer_element.cpp  renderer_element.hpp  texture.cpp  texture.hpp
